--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>inteligencia artificial nos games</title>
 </head>
 <body>
-    
+    <header>
+        <h1>inteligencia artificial nos games</h1>
+        <p>Avanços Impressionantes na Integração de Inteligência Artificial nos Jogos Transformam a Experiência dos Jogadores
+
+        </p>
+    </header>
+    <main>
+        <section>
+            <div>
+                <h2>Noticias 1 M josé antônio</h2>
+            </div>
+            <div>
+                <img src="imagem-escola.png" alt="">
+                <p>NPCs com Vida Própria:
+                  os personagens não jogáveis (NPCs) agora ganharam uma vida própria graças aos avanços na IA. Eles respondem de maneira dinâmica às ações dos jogadores, aprendendo e adaptando-se ao estilo de jogo de cada pessoa. Isso cria experiências de jogo mais realistas, onde as interações com NPCs são mais imprevisíveis e emocionantes.
+                 <p>Gráficos Hiper-realistas com IA:
+                    A integração de IA nos motores gráficos está levando os gráficos dos jogos a um novo patamar de hiper-realismo. A IA é capaz de gerar texturas, iluminação e animações em tempo real, criando ambientes visuais tão impressionantes que desafiam a distinção entre o virtual e o real.
+                    <p>Personalização de Jogabilidade:
+                        A IA também está sendo aplicada na personalização da jogabilidade. Os algoritmos analisam o comportamento do jogador, preferências e estilo de jogo para ajustar automaticamente a dificuldade, criar missões personalizadas e até mesmo adaptar a narrativa do jogo de acordo com as escolhas do jogador, garantindo uma experiência única para cada indivíduo.
+                        <p>Combate com Inteligência Artificial Avançada:
+                            Jogos de combate agora apresentam adversários controlados por IA com capacidades de aprendizado profundo. Eles analisam padrões de ataque do jogador, desenvolvem estratégias e evoluem ao longo do tempo. Isso proporciona desafios mais substanciais, onde a vitória exige não apenas habilidade, mas também a capacidade de se adaptar a um oponente em constante evolução.
+                        
+                </div>
+        </section>
+        <section>
+            <div>
+                <h2>endereço:R. do Rosário, 194 - Centro, Ponta Grossa - PR, 84010-150</h2>
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Vídeo</h2>
+            </div>
+            <div>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
